--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,11 @@
 [package]
-name = "file-parser"
+name = "file_parser"
 version = "0.1.0"
+author = "Ayomide Bajo <oluwashinabajo@gmail.com>"
 edition = "2021"
+about = "A simple file parser that reads a file and converts to another file extension"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+clap = {version = "4.4.18", features = ["derive"]}
